--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.0",
