--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.0",
     "sequelize-cli": "^6.4.1"
