--- a/.env.exemple
+++ b/.env.exemple
@@ -6,10 +6,10 @@ JWT_TOKEN_SECRET=
 JWT_TOKEN_EXPIRATION=1d
 
 #SETTINGS DATABASE
-DIALECT=mysql
-USER_NAME=root
-PASSWORD=1234
-HOST_NAME=localhost
-DATABASE=api
-PORT=3306
+DIALECT=
+USER_NAME=
+PASSWORD=
+HOST_NAME=
+DATABASE=
+PORT=
 
