--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 #Server
-PORT_SERVER=8081
+PORT_SERVER=
 
 #JWT
 JWT_TOKEN_SECRET=
-JWT_TOKEN_EXPIRATION=1d
+JWT_TOKEN_EXPIRATION=
 
 #SETTINGS DATABASE
 DIALECT=
