--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -5,10 +5,10 @@ volumes:
 
 services:
     postgres:
-        container_name: library_postgres
+        #container_name: library_postgres
         image: postgis/postgis:13-3.1-alpine
         restart: always
-        env_file: 
+        env_file:
             - .env
         ports:
             - "5432:5432"
